<resources>
    <string name="app_name">News Provider</string>
    <string name="home">Home</string>
    <string name="menu_sync_feed">Sync Feed</string>
    <string name="menu_mark_all_read">Mark all read</string>
    <string name="marked_all_as_read">All items marked as read</string>
    <string name="toast_back_press_exit">Press BACK again to exit</string>
    <string name="new_feed">New feed</string>
    <string name="hint_feed_url">Feed URL</string>
    <string name="add">Add</string>
    <string name="no_record">No Record</string>
    <string name="error_message">\"Error: %s\"</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="url_is_required">URL is required</string>
    <string name="feed_added">Feed added %s</string>
    <string name="error_feed_add">Feed add error</string>
    <string name="error_parse_data_from">Error parsing data from %s</string>
    <string name="feeds">Feeds</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="pause">Pause</string>
    <string name="unpause">Unpause</string>
    <string name="paused">Paused</string>
    <string name="name_is_required">Name is required</string>
    <string name="invalid_name">Invalid name</string>
    <string name="record_not_found">Record not found</string>
    <string name="rename_feed_to">Rename feed to %s</string>
    <string name="feed_sync_success">Feed sync success</string>
    <string name="error_feed_sync_failed">Feed sync failed</string>
    <string name="error_rss_read">Failed to read : %s</string>
    <string name="error_rss_channel_update">Failed updating channel : %s</string>
    <string name="feed_sync_pending_online">Feed will be sync once device online</string>
    <string name="device_status_offline">You are offline</string>
    <string name="device_status_online">You are back online</string>
    <string name="settings">Settings</string>
    <string name="licenses">Licenses</string>
    <string name="sync_every_x_hour">Sync every %d hour(s)</string>
    <string name="notification_rss_sync_channel_name">Feed sync notification</string>
    <string name="notification_rss_sync_channel_description">Notify when feed sync done</string>
    <string name="notification_rss_sync_title">%s updated !</string>
    <string name="notification_rss_sync_content">%d Unread item(s)</string>
    <string name="notification_rss_sync_content_summary">There are %d update(s)</string>
    <string name="follow_system">Follow System</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="theme_setting">Theme Setting</string>
    <string name="url">Url</string>
    <string name="copy">Copy</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="log_file">Log File</string>
    <string name="share_log_file">Share log file</string>
    <string name="error_sharing_log_file">Error sharing log file</string>
    <string name="error_failed_to_sync_some_rss">Failed to sync some RSS</string>
    <string name="version">Version:</string>
    <string name="filter_by">Filter by:</string>
    <string name="error_failed_to_open_file">Failed to open file</string>
    <string name="error_parsing_opml_file">Error parsing OPML file</string>
    <string name="added_rss">Added RSS: %d</string>
    <string name="opml_feeds_not_added">Feeds not added: %d</string>
    <string name="error_exporting_rss_channel">Error exporting feed: %s</string>
    <string name="menu_export_opml">Export My Feed</string>
    <string name="error_exporting_opml">Error exporting feed</string>
    <string name="share_opml">Share feed</string>
    <string name="menu_one_hand_mode">App One Hand Mode</string>
    <string name="menu_subtitle_one_hand_mode">Enable app built-in one hand mode layout for easier use</string>
    <string name="settings_use_dynamic_colors">Use system colors (Material You)</string>
    <string name="clear_log_file">Clear log file</string>
    <string name="log_file_deleted">Log file deleted</string>
    <string name="open_link">Open link</string>
    <string name="main_menu">Main menu</string>
    <string name="back_to_previous_page">Back to previous page</string>
    <string name="sync_feed_period_in_hour">Sync feed period in hour</string>
    <string name="menu_auto_mark_read">Auto Mark Read</string>
    <plurals name="auto_mark_read_after_x_days">
        <item quantity="one">Auto mark read after %d day</item>
        <item quantity="other">Auto mark read after %d days</item>
    </plurals>
    <string name="auto_mark_read_off">Off</string>
    <string name="auto_mark_read_period_in_day">Auto mark read period in days</string>
    <plurals name="x_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="error_auto_mark_read_failed">Failed to auto mark read</string>
    <string name="one_hand_mode_activated">One hand mode activated</string>
    <string name="one_hand_mode_deactivated">One hand mode deactivated</string>
    <string name="http_not_allowed">HTTP not allowed use HTTPS instead</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="menu_edit_link">Edit Link</string>
    <string name="menu_copy_link">Copy Link</string>
    <string name="save_and_open">Save and Open</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="success_save_link">Link saved</string>
    <string name="title_edit_link">Edit Link</string>
    <string name="title_showcase_rss_channel_list">Feed List</string>
    <string name="showcase_rss_channel_list">Tap and hold to edit your feed name, or delete it, you could also see the link for this feed</string>
    <string name="title_showcase_rss_item_list">Your news list</string>
    <string name="showcase_rss_item_list">Tap to open detail, or tap and hold unread news to mark as read, or tap and hold read news to mark as unread</string>
    <string name="title_download_image">Download Image</string>
    <string name="menu_subtitle_download_image">Enable/Disable image download</string>
    <string name="download_image_enabled">Download image enabled</string>
    <string name="download_image_disabled">Download image disabled</string>
    <string name="title_mark_read_on_scroll">Mark as Read on Scroll</string>
    <string name="menu_subtitle_mark_read_on_scroll">Enable/Disable marking items as read when scrolled past</string>
    <string name="mark_read_on_scroll_enabled">Mark as read on scroll enabled</string>
    <string name="mark_read_on_scroll_disabled">Mark as read on scroll disabled</string>
    <string name="image">Image</string>
    <string name="menu_import_opml">Import OPML file</string>
    <string name="open_video">Open video</string>
    <string name="buy_developer_a_coffee">Buy developer a coffee</string>
    <string name="donation_pitch">Support developer, treat a cup of coffee</string>
    <string name="trakteer">Trakteer</string>
    <string name="donation_other_apps">Other apps by developer: %s</string>
    <string name="donation_thank_you">Thank you for your support</string>
    <string name="menu_download_video">Download Video</string>
    <string name="error_permission_denied">Permission denied</string>
    <string name="begin_downloading">Begin downloading</string>
    <string name="sort_newest_first">Sorted by newest first</string>
    <string name="sort_oldest_first">Sorted by oldest first</string>
    <string name="menu_toggle_favorite">Toggle favorite</string>
    <string name="favorite_added">Added to favorites</string>
    <string name="favorite_removed">Removed from favorites</string>
    <string name="favorite_add">Add to favorites</string>
    <string name="favorite_remove">Remove from favorites</string>
    <string name="state_read">Read</string>
    <string name="state_unread">Unread</string>
    <string name="edit_channel">Edit channel</string>

    <plurals name="new_items_available">
        <item quantity="one">%d new item</item>
        <item quantity="other">%d new items</item>
    </plurals>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search articles…</string>
    <string name="feed_already_added_as">This feed is already added as \'%s\'</string>
    <string name="error_feed_duplicate_redirect">This feed redirects to a feed that is already added</string>

    <string-array name="array_filter_by">
        <item>All</item>
        <item>Unread</item>
        <item>Read</item>
        <item>Favorites</item>
    </string-array>
    <string name="notification_permission_disabled_hint">Notifications are turned off. New article alerts won\'t be shown.</string>
    <string name="notification_permission_open_settings">Open settings</string>
    <string name="search_articles_in_category">Search articles in category %s</string>
    <string name="menu_previous_article">Previous article</string>
    <string name="menu_next_article">Next article</string>
    <string name="no_more_articles">No more articles</string>
    <string name="title_swipe_article_navigation">Swipe Article Navigation</string>
    <string name="menu_subtitle_swipe_article_navigation">Enable/Disable navigating to the next or previous article by swiping from the screen edges on the article page</string>
    <string name="swipe_article_navigation_enabled">Swipe article navigation enabled</string>
    <string name="swipe_article_navigation_disabled">Swipe article navigation disabled</string>
</resources>
