<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/menu_toggle_favorite"
            android:icon="@drawable/ic_star_outline_white"
            android:title="@string/menu_toggle_favorite"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_edit_link"
            android:icon="@drawable/ic_link_black"
            android:title="@string/menu_edit_link"
            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/menu_copy_link"
            android:icon="@drawable/ic_content_copy_black"
            android:title="@string/menu_copy_link"
            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/menu_download_video"
            android:icon="@drawable/ic_download_black"
            android:title="@string/menu_download_video"
            app:showAsAction="collapseActionView" />
    </group>
</menu>