<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/pageBackground">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/container_app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/container_swipe_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/container_list_news"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="?attr/colorOnPrimary"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="?attr/colorSecondary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu_settings"
                style="@style/Theme.Anewsprovider.BorderlessMenuButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                app:icon="@drawable/ic_settings_black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/feeds"
                    android:textSize="@dimen/text_nav_menu" />

                <FrameLayout
                    android:id="@+id/container_list_channel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/text_margin" />
            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.drawerlayout.widget.DrawerLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/new_feed"
        app:srcCompat="@drawable/ic_add_white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
